--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,8 +1,8 @@
 <%include ../partials/header%>
     <div class="container">
         <div class="row">
-            <h1 style="text-align: center;">Create a New Campground</h1>
-            <div style="width: 30%; margin:30px auto;">
+            <div class="form-full">
+                <h1>Create a New Campground</h1>
                 <form action="/campgrounds" method="POST">
                     <div class="form-group">
                         <input class="form-control" type="text" name="name" placeholder="Name">
@@ -17,7 +17,6 @@
                         <button class="btn btn-primary btn-lg btn-block">Submit!</button>
                     </div>
                 </form>
-                <a href="/campgrounds">Go Back</a>
             </div>
         </div>
     </div>
