--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -1,8 +1,8 @@
 <%include ../partials/header%>
     <div class="container">
         <div class="row">
-            <h1 style="text-align: center;">Edit Comment</h1>
-            <div style="width: 30%; margin:30px auto;">
+            <div class="form-full">
+                <h1>Edit Comment</h1>
                 <form action="/campgrounds/<%=campground_id%>/comments/<%= comment._id %>?_method=PUT" method="POST">
                     <div class="form-group">
                         <input class="form-control" type="text" name="comment[text]" value="<%= comment.text %>">
@@ -11,7 +11,6 @@
                         <button class="btn btn-primary btn-lg btn-block">Submit!</button>
                     </div>
                 </form>
-                <a href="/campgrounds">Go Back</a>
             </div>
         </div>
     </div>
