--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -1,8 +1,8 @@
 <%include ../partials/header%>
     <div class="container">
         <div class="row">
-            <h1 style="text-align: center;">Add New Comment To <%=campground.name%></h1>
-            <div style="width: 30%; margin:30px auto;">
+            <div class="form-full">
+                <h1>Add New Comment To <%=campground.name%></h1>
                 <form action="/campgrounds/<%=campground._id%>/comments" method="POST">
                     <div class="form-group">
                         <input class="form-control" type="text" name="comment[text]" placeholder="Text">
@@ -11,10 +11,8 @@
                         <button class="btn btn-primary btn-lg btn-block">Submit!</button>
                     </div>
                 </form>
-                <a href="/campgrounds">Go Back</a>
             </div>
         </div>
     </div>
-
 <%include ../partials/footer%>
 
