--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,20 @@
 <% include ./partials/header %>
-
-<h1>Login!</h1>
-
-<form action="/login" method="POST">
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <button>Login</button>
-</form>
-
+<div class="container">
+    <div class="row">
+        <div class="form-full">
+            <h1>Login</h1>
+            <form action="/login" method="POST">
+                <div class="form-group">
+                    <input class="form-control" type="text" name="username" placeholder="Username">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="password" name="password" placeholder="Password">
+                </div>
+                <div class="form-group">
+                    <button class="btn btn-primary btn-lg btn-block">Login</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
 <% include ./partials/footer %>
