--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,10 +1,21 @@
 <%include ./partials/header%>
-
-<h1>Sign up!</h1>
-<form action="/register" method="POST">
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <button>Sign up</button>
-</form>
-
+<div class="container">
+        <div class="row">
+            <div class="form-full">
+                <h1>Sign up</h1>
+                <form action="/register" method="POST">
+                    <div class="form-group">
+                        <input id="username" class="form-control" type="text" name="username" placeholder="Username">
+                    </div>
+                    <div class="form-group">
+                        <input id="password" class="form-control" type="password" name="password" placeholder="password">
+                    </div>
+                    
+                    <div class="form-group">
+                        <button class="btn btn-primary btn-lg btn-block">Submit!</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 <%include ./partials/footer%>
