--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,6 +14,7 @@
                     <button class="btn btn-primary btn-lg btn-block">Login</button>
                 </div>
             </form>
+            <p>Don't have an account? <a href="/register">Sign up here!</a></p>
         </div>
     </div>
 </div>
