--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,6 +15,7 @@
                         <button class="btn btn-primary btn-lg btn-block">Submit!</button>
                     </div>
                 </form>
+                <p>Already have an account? <a href="/login">Log in here!</a></p>
             </div>
         </div>
     </div>
