--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -10,6 +10,7 @@
             </div>
         </div>
         <div class="col-md-9">
+            <h1>Current Admins</h1>
             <ul class="list-group list-group-flush">
                 <% admins.forEach(function(admin){ %>
                     <li class="list-group-item">
