add admin control link to nav bar for admins only

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -19,6 +19,9 @@
                         <% } else { %>
                             <li><a href="#">Signed in as <%= currentUser.username %></a></li>
                             <li><a href="/logout">Logout</a></li>
+                            <% if(currentUser.isAdmin){ %>
+                            <li><a href="/admin">Admin Controls</a></li>
+                            <% } %>
                         <% } %>
                     </ul>
                 </div>
