--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -6,7 +6,7 @@
             <div class="list-group">
                 <a href="#" class="list-group-item active">Home</a>
                 <a href="#" class="list-group-item">Add new admin</a>
-                <a href="#" class="list-group-item">Upgrade user to admin</a>
+                <a href="/admin/promote" class="list-group-item">Upgrade user to admin</a>
             </div>
         </div>
         <div class="col-md-9">
