--- a/views/admin/promote.ejs
+++ b/views/admin/promote.ejs
@@ -4,7 +4,7 @@
         <div class="col-md-3">
             <p class="lead">Admin Controls</p>
             <div class="list-group">
-                <a href="#" class="list-group-item">Home</a>
+                <a href="/admin" class="list-group-item">Home</a>
                 <a href="#" class="list-group-item">Add new admin</a>
                 <a href="#" class="list-group-item active">Upgrade user to admin</a>
             </div>
