--- a/views/register.ejs
+++ b/views/register.ejs
@@ -8,7 +8,7 @@
                         <input id="username" class="form-control" type="text" name="username" placeholder="Username">
                     </div>
                     <div class="form-group">
-                        <input id="password" class="form-control" type="password" name="password" placeholder="password">
+                        <input id="password" class="form-control" type="password" name="password" placeholder="Password">
                     </div>
                     
                     <div class="form-group">
