--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -5,7 +5,7 @@
             <p class="lead">Admin Controls</p>
             <div class="list-group">
                 <a href="#" class="list-group-item active">Home</a>
-                <a href="#" class="list-group-item">Add new admin</a>
+                <a href="/admin/register" class="list-group-item">Add new admin</a>
                 <a href="/admin/promote" class="list-group-item">Upgrade user to admin</a>
             </div>
         </div>
