--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -17,11 +17,11 @@
                     <h4><a><%= campground.name %></a></h4>
                     <p><%= campground.description %></p>
                     <p><em>Submitted by</em> <%= campground.author.username %></p>
-                    <% if(currentUser && campground.author.id.equals(currentUser._id)){ %>
-                    <a class="btn btn-warning" href="/campgrounds/<%=campground._id%>/edit">Edit</a>
-                    <form class="delete-form" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
-                        <button class="btn btn-danger">Delete</button>
-                    </form>
+                    <% if(currentUser && campground.author.id.equals(currentUser._id) || currentUser.isAdmin){ %>
+                        <a class="btn btn-warning" href="/campgrounds/<%=campground._id%>/edit">Edit</a>
+                        <form class="delete-form" action="/campgrounds/<%=campground._id%>?_method=DELETE" method="POST">
+                            <button class="btn btn-danger">Delete</button>
+                        </form>
                     <% } %>
                 </div>
             </div>
@@ -36,11 +36,11 @@
                             <strong><%= comment.author.username %></strong>
                             <span class="pull-right">10 days ago</span> 
                             <p><%= comment.text %></p>
-                            <% if(currentUser && comment.author.id.equals(currentUser._id)){ %>
-                            <a class="btn btn-xs btn-warning" href="/campgrounds/<%=campground._id%>/comments/<%=comment._id%>/edit">Edit</a>
-                            <form class="delete-form" action="/campgrounds/<%=campground._id%>/comments/<%=comment._id%>?_method=DELETE" method="POST">
-                                <button class="btn btn-xs btn-danger">Delete</button>
-                            </form>
+                            <% if(currentUser && comment.author.id.equals(currentUser._id) || currentUser.isAdmin){ %>
+                                <a class="btn btn-xs btn-warning" href="/campgrounds/<%=campground._id%>/comments/<%=comment._id%>/edit">Edit</a>
+                                <form class="delete-form" action="/campgrounds/<%=campground._id%>/comments/<%=comment._id%>?_method=DELETE" method="POST">
+                                    <button class="btn btn-xs btn-danger">Delete</button>
+                                </form>
                             <% } %>
                         </div>
                     </div>
