fixed admin registration form alignment

--- a/views/admin/register.ejs
+++ b/views/admin/register.ejs
@@ -9,6 +9,7 @@
                     <a href="/admin/promote" class="list-group-item">Upgrade user to admin</a>
                 </div>
             </div>
+            <div class="col-md-9">
             <div class="form-full">
                 <h1>Register New Admin Account</h1>
                 <form action="/admin/register" method="POST">
@@ -23,6 +24,7 @@
                         <button class="btn btn-primary btn-lg btn-block">Submit!</button>
                     </div>
                 </form>
+            </div>
             </div>
         </div>
     </div>
